--- a/index.html
+++ b/index.html
@@ -6,11 +6,110 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/download.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&family=Indie+Flower&family=Merriweather&family=Poppins&family=Roboto+Slab:wght@500&family=Sora:wght@100&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <title>Eat-Fresh</title>
 </head>
 
 <body>
+    <section class="Top-part">
+        <div class="div-width">
+            <h1> <span>Skip</span> The Diet,</h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide <br>
+                healthy and delicious food for you!</p>
+            <br>
+            <a class="button" target="_blank" href="">Order Food</a>
+        </div>
+        <div class="div-width">
+            <img src="images/stong.png" alt="">
+        </div>
+    </section>
+    <br>
+    <section class="middle-part">
+        <div class="div-width">
+            <img src="images/Shawon.png" alt="">
+        </div>
+        <div class="div-width">
+            <br> <br><br> <br>
+            <h2>About Me</h2>
+            <p style="margin: 8px;">Hello!This is Syed Shahanur Shammas,
+                I love eating food.Especially Healthy food. That's why I can say that I am foody.
+                I try not to eat jhank food, But most of the time I have to eat them because of the circumstanses.I am
+                bangladeshi, we usually eat rice.it has very good amount of energy.But it's tough to avoid unhealthy
+                food.Unhealthy food is every where in bangladesh. Lorem ipsum, dolor sit amet consectetur adipisicing
+                elit.
+                Porro ratione nostrum sint nesciunt corporis fugiat eum tempore, excepturi error dolor iusto dicta
+                ducimus
+                odit mollitia dolorum minima placeat non obcaecati.
+            </p>
+            <br> <br>
+            <a class="button" href=""> Contact Me</a>
+
+
+        </div>
+
+    </section>
+
+    <div class="div-for-text">
+        <br><br>
+        <h1 style="text-align:center;">My Recipies</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+            Lorem Ipsum has been the industry's standard dummy text ever since the
+            1500s.</p>
+    </div>
+    <br>
+    <section class="recipe">
+        <div class="recipe-div">
+            <img src="images/Project Cover.jpg" alt="">
+            <h3>Recipe Title </h3>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime saepe nihil ratione animi ipsum vitae ipsa,
+            perferendis enim a! Dolorum, eligendi illum a eveniet repudiandae odio natus quaerat, molestiae cum quos
+            ipsam
+            laboriosam. Error perspiciatis maiores assumenda est aliquid aperiam suscipit cumque quisquam, veniam alias!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        </div>
+        <div class="recipe-div">
+            <img src="images/Project Cover.jpg" alt="">
+
+            <h3>Recipe Title</h3>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea earum quisquam maxime blanditiis laborum
+            repudiandae, ullam doloremque? Eligendi, possimus sequi quae ex delectus itaque dolore tempora facilis
+            eum
+            earum
+            impedit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse nesciunt libero, vel magni eos
+            consectetur deleniti cum, doloribu
+
+        </div>
+    </section>
+
+    <section class="middle-below">
+        <div class="div-align">
+            <h1>800k</h1>
+            <p>YouTube Subscribers</p>
+        </div>
+        <div class="div-align">
+            <h1>2.5m</h1>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="div-align">
+            <h1>100k</h1>
+            <p>Drible short like</p>
+
+        </div>
+    </section>
+    <footer>
+        <h2 style="color:orange; text-align: center;">Eat <span style="color:gray;">Fresh</span></h2>
+        <p style="color: gray;">Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
 
 </body>
 
