--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <h1 style="text-align:center;">My Recipies</h1>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
             Lorem Ipsum has been the industry's standard dummy text ever since the
-            1500s.</p>
+            1500s. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, ab.</p>
     </div>
     <br>
     <section class="recipe">
