Adding final commit

--- a/index.html
+++ b/index.html
@@ -45,11 +45,7 @@
                 I love eating food.Especially Healthy food. That's why I can say that I am foody.
                 I try not to eat jhank food, But most of the time I have to eat them because of the circumstanses.I am
                 bangladeshi, we usually eat rice.it has very good amount of energy.But it's tough to avoid unhealthy
-                food.Unhealthy food is every where in bangladesh. Lorem ipsum, dolor sit amet consectetur adipisicing
-                elit.
-                Porro ratione nostrum sint nesciunt corporis fugiat eum tempore, excepturi error dolor iusto dicta
-                ducimus
-                odit mollitia dolorum minima placeat non obcaecati.
+                food.Unhealthy food is every where in bangladesh.So I will eat healthy food as much as I can.
             </p>
             <br> <br>
             <a class="button" href=""> Contact Me</a>
@@ -61,32 +57,36 @@
 
     <div class="div-for-text">
         <br><br>
-        <h1 style="text-align:center;">My Recipies</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
-            Lorem Ipsum has been the industry's standard dummy text ever since the
-            1500s. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, ab.</p>
+        <h1>My Recipe</h1>
+        <p>Whether you are transitioning back to a workplace or not this summer, you’ve still likely got way more on
+            <br>
+            your plate (and more plates to fill) day in, day out. Which can make dinnertime feel like more of a <br>
+            production than it should. Wouldn’t it be great if someone came along with a list of ways to streamline
+            the <br>
+            process, saving you time and buying you back a little sanity
+        </p>
     </div>
-    <br>
     <section class="recipe">
         <div class="recipe-div">
             <img src="images/Project Cover.jpg" alt="">
-            <h3>Recipe Title </h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime saepe nihil ratione animi ipsum vitae ipsa,
-            perferendis enim a! Dolorum, eligendi illum a eveniet repudiandae odio natus quaerat, molestiae cum quos
-            ipsam
-            laboriosam. Error perspiciatis maiores assumenda est aliquid aperiam suscipit cumque quisquam, veniam alias!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <h2>My Recipe</h2>
+            <p>
+                Beans can be super versatile in quick meals, but if you are working with dried beans, you often have to
+                remember to soak them overnight, which doesn’t make them fast food. Having some pre-soaked beans at the
+                ready is a terrific way to speed up some soulful home cooking. You can put the beans in the water and
+                leave in the fridge for a couple of days so that they are waiting for you and not the other way around.
+            </p>
         </div>
         <div class="recipe-div">
             <img src="images/Project Cover.jpg" alt="">
 
-            <h3>Recipe Title</h3>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea earum quisquam maxime blanditiis laborum
-            repudiandae, ullam doloremque? Eligendi, possimus sequi quae ex delectus itaque dolore tempora facilis
-            eum
-            earum
-            impedit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse nesciunt libero, vel magni eos
-            consectetur deleniti cum, doloribu
+            <h2>My Recipe</h2>
+            <p>
+                If you are like me, your freezer has a good stash of heat-and-eat appetizers at the ready for
+                spontaneous entertaining. But since there are no cocktail parties in our foreseeable futures, you can
+                make a whole fun meal out of those pigs in blankets, mini quiches, cocktail meatballs and little phyllo
+                or puff pastry delectables. Kids especially love a meal of mini dishes!
+            </p>
 
         </div>
     </section>
